# web-crawler-search-engine

./: .env.example  .gitignore  README.md  alembic.ini  capy.sh  docker-compose.yaml  prometheus.yml  pyproject.toml  start-workers.sh  stop-workers.sh
alembic/versions/: 3c2be526a580_create_link_relations_table.py  8dd0ff5fc030_create_links_table.py  92fdbeb09994_add_indexes.py  fb1588fb51ff_create_domains_table.py
docker/grafana/provisioning/datasources/: prometheus.yaml
docker/workers/: Dockerfile
src/: prometheus_exporters.py  vars.py
src/database/: engine.py
src/models/: Domain.py  Link.py  LinkRelation.py
src/repositories/: DomainRepository.py  LinkRelationRepository.py  LinkRepository.py
src/scripts/: publish.py
src/seeds/: blogs.txt  ecommerce.txt  entertainment.txt  everything.txt  government.txt  news-french.txt  news-international.txt  social.txt  tech.txt  wikipedia.txt
src/utils/: httpclient.py  math.py
src/utils/parsers/: __init__.py  crawlparser.py  robotsparser.py  sitemapparser.py  urlparser.py
src/workers/: domains.py  links.py  prioritizer.py  router.py  selector.py  sitemaps.py
